tests/ui/diagnostic-not-implemented-from-bytes.nightly.stderr
error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> $DIR/diagnostic-not-implemented-from-bytes.rs:17:24
   |
17 |     takes_from_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromBytes` is not implemented for `NotZerocopy`
  --> $DIR/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 79 others
note: required by a bound in `takes_from_bytes`
  --> $DIR/diagnostic-not-implemented-from-bytes.rs:20:24
   |
20 | fn takes_from_bytes<T: FromBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_bytes`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
